discussion/kv_engine/162024/162024_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48506: Introduce CheckpointCursor::distance

Change-Id: I22dafe6487043cda8f47e2118f5071af3b2a7e7c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-27 05:09:53.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-27 05:32:52.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34391/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_visitor.cc:35:5:
error: use of undeclared identifier "TRACE_EVENT0"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34391/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40408/ : FAILURE

Timeout of a CTest test 410/410 Test #330: memcached_testapp.default.TransportProtocols/StatsTest ........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40408/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12840/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:538:5: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
    TRACE_EVENT0("wip", "C::expelItems");
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:563:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::splice");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:576:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::open_and_mem");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:600:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::closed_or_disk");
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12840/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:538:5:
error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12840/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15238/ : FAILURE

ThreadSanitizer issue: data race (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x87578) in operator delete(void*, unsigned long)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15238/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11630/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2474/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14711/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14450/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13596/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22722/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2508/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
